--- a/default.html
+++ b/default.html
@@ -9,12 +9,16 @@
 
     <!-- vtv_html5 참조 -->
     <link href = "css/default.css" rel = "stylesheet" />
-    <link href = "css/fonts.css" rel="stylesheet" />
+    <link href = "css/fonts.css" rel = "stylesheet" />
+
+    <link href = "css/Lock.css" rel = "stylesheet" />
 
 </head>
 <body>
 
     <div id = "Scene-MusicPlayer"></div>
+
+    <div id = "Scene-Lock"></div>
 
     <!-- jquery & jquery-ui -->
     <script src = "bower_components/jquery/dist/jquery.min.js"></script>
